# stock-ai-platform

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  DB_SCHEMA.md  Dockerfile  INTEGRATION_RUNBOOK.md  KIS_OPS_CHECKLIST.md  PLANS.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_v0.10.md  RELEASE_NOTES_v0.11.md  RELEASE_NOTES_v0.12.md  RELEASE_NOTES_v0.13.md  RELEASE_NOTES_v0.14.md  RELEASE_NOTES_v0.15.md  RELEASE_NOTES_v0.16.md  RELEASE_NOTES_v0.1_BACKEND.md  RELEASE_NOTES_v0.2_FRONTEND.md  RELEASE_NOTES_v0.3.md  RELEASE_NOTES_v0.4.md  RELEASE_NOTES_v0.5.md  RELEASE_NOTES_v0.6.md  RELEASE_NOTES_v0.7.md  RELEASE_NOTES_v0.8.md  RELEASE_NOTES_v0.9.md  RELEASE_NOTES_v1.0.md  ROADMAP.md  RUNBOOK_REAL_TRADING.md  SECURITY.md  TASKS.md  TESTING.md  alembic.ini  codex_agent_creation_spec.md  docker-compose.yml  pyproject.toml  pytest_out.txt  run.bat  (+3 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline_v0_7.py  0002_auth_foundation.py  0003_watchlist.py  0004_user_preferences.py  0005_virtual_trading_core.py  0006_virtual_positions.py  0007_order_candidates.py  0008_approval_audit_logs.py  0009_real_orders.py  0010_real_fills.py
app/: __init__.py  main.py
app/ai/: __init__.py  interfaces.py
app/analysis/: __init__.py  indicator_service.py  report_score_calculator.py  score_producers.py  technical_analyzer.py
app/api/: __init__.py  approval_routes.py  auth_routes.py  health_routes.py  metrics_routes.py  paper_routes.py  preferences_routes.py  real_order_routes.py  routes.py  schemas.py  validation_routes.py  watchlist_routes.py
app/approval/: __init__.py  approval_service.py
app/auth/: __init__.py  brute_force.py  dependencies.py  security.py
app/backtest/: __init__.py  cost_model.py  engine.py  multi_strategy_runner.py  regime_breakdown.py  regime_split.py  walk_forward.py
app/broker/: __init__.py  fill_sync_service.py  interfaces.py  kis_order_client.py  kis_order_transport_real.py  real_order_executor.py  simulation_broker.py
app/config/: __init__.py  logging.py  settings.py
app/data/: __init__.py  dart_provider.py  dtos.py  ingestion.py  interfaces.py  provider_health_monitor.py  provider_resilience.py  rss_provider.py
app/db/: __init__.py  base.py  models.py  session.py
app/decision/: __init__.py  holding_check_engine.py  interfaces.py  recommendation_engine.py  recommendation_result_service.py  risk_engine.py  scoring_engine.py
app/middleware/: __init__.py  rate_limit.py  request_id.py  security_headers.py
app/monitoring/: __init__.py  prometheus.py  sentry.py
app/notification/: __init__.py  dispatchers.py  notification_service.py  report_generator.py  telegram_notifier.py
app/paper/: __init__.py  pnl_tracker.py
app/risk/: __init__.py  pre_trade_risk_engine.py
app/scheduler/: __init__.py  jobs.py  scheduler.py
app/scoring/: __init__.py  provider_policy.py  score_delta.py
app/strategy/: __init__.py  interfaces.py  registry.py  rule_based.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  index.css  router.tsx  setupTests.ts
scripts/: check_seeded.py  create_admin.py  export_backtest.py  import_analyst_reports.py  import_earnings.py  import_fundamentals.py  migrate.py  run_backtest.py  seed_mock_data.py
stock_ai_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/data/: test_dart_http_transport.py  test_dart_provider.py  (+4 more)
(+272 files in other folders)
