[project]
name = "stock-ai-platform"
version = "0.1.0"
description = "Korean stock AI analysis, recommendation, and holding-check platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.99,<0.100",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "httpx>=0.24,<0.27",
    "uvicorn>=0.30,<1.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
