[project]
name = "stock-ai-platform"
version = "0.1.0"
description = "Korean stock AI analysis, recommendation, and holding-check platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.99,<0.100",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.24,<0.27",
    "uvicorn>=0.30,<1.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

# Setuptools 의 flat-layout 자동 탐지가 top-level 디렉터리 (app / logs /
# frontend / tests / scripts) 를 모두 후보로 잡아 "Multiple top-level packages"
# 오류를 발생시키는 것을 방지한다. Python 배포 대상은 ``app`` 패키지뿐 — 그
# 외 디렉터리는 빌드 산출물 / 운영 자산 / 프런트엔드 / 테스트 fixture 다.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*", "frontend*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
