[project]
name = "stock-ai-platform"
version = "0.1.0"
description = "Korean stock AI analysis, recommendation, and holding-check platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.99,<0.100",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.24,<0.27",
    "uvicorn>=0.30,<1.0",
    "apscheduler>=3.10,<4.0",
    "PyJWT>=2.8,<3.0",
    "slowapi>=0.1.9,<1.0",
    "python-json-logger>=2.0,<3.0",
    "sentry-sdk>=2.0,<3.0",
    # v0.11 Phase C -- Prometheus exporter for provider observability.
    # Default-OFF: GET /metrics returns 404 unless PROMETHEUS_ENABLED=true.
    # Apache 2.0 license; pure Python; no native build dependencies.
    "prometheus-client>=0.19,<1.0",
    # Password hashing intentionally uses Python stdlib `hashlib.scrypt` rather
    # than bcrypt: scrypt is memory-hard, pure-Python (no C extension / wheel
    # constraints), and works on every supported Python version including MSYS2
    # UCRT64 builds where bcrypt has no PyPI wheel. Cost parameters are tunable
    # via `Settings.password_hash_n / r / p`. See app/auth/security.py.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    # v0.11 Phase A -- respx mocks httpx requests at the transport level so
    # DART/RSS HTTP transport tests never reach the real network. Test-only
    # dependency; production code does not import respx.
    "respx>=0.21,<0.22",
]

# Setuptools 의 flat-layout 자동 탐지가 top-level 디렉터리 (app / logs /
# frontend / tests / scripts) 를 모두 후보로 잡아 "Multiple top-level packages"
# 오류를 발생시키는 것을 방지한다. Python 배포 대상은 ``app`` 패키지뿐 — 그
# 외 디렉터리는 빌드 산출물 / 운영 자산 / 프런트엔드 / 테스트 fixture 다.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*", "frontend*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
